XSCOLIBRI-32: Unneeded horizontal scroll bar in edit mode Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@23147 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -1953,13 +1953,15 @@ span.pitemseparator {
     font-weight: bold;
 }
 
+.xwikipanelcontents dl dd table#xwikiincludeddocuments {
+    width: 100%;
+}
 .xwikipanelcontents dl dd table#xwikiincludeddocuments td {
     border-top: 1px dotted #EEE;
 }
 
 .xwikipanelcontents dl dd table#xwikiincludeddocuments td a {
     display: block;
-    width: 148px;
     position: relative;
     overflow: hidden;
 }
